--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Guia Hospital das Clínicas - Ajuda para Pessoas Idosas</title>
-    <meta name="description" content="Guia simples e claro para ajudar pessoas idosas a acessarem os serviços do Hospital das Clínicas. Agendamento de consultas, dúvidas e suporte personalizado." />
-    <link rel="shortcut icon" href="/favicon-hc-conecta.png" type="image/x-icon">
-    <meta name="author" content="Equipe HC Guia" />
+    <meta name="description" content="O Skills Match usa IA para te conectar com a profissão ideal com base nas suas habilidades. Teste agora e descubra seu potencia" />
+    <meta name="author" content="Skills Match" />
   </head>
 
   <body>
