fix: update page title to 'Skills Match'

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Guia Hospital das Clínicas - Ajuda para Pessoas Idosas</title>
+    <title>Skills Match</title>
     <meta name="description" content="O Skills Match usa IA para te conectar com a profissão ideal com base nas suas habilidades. Teste agora e descubra seu potencia" />
     <meta name="author" content="Skills Match" />
   </head>
